FIX: Prevent clipping of dropdowns in panels

--- a/src/styles/common/overrides/panel-overrides.scss
+++ b/src/styles/common/overrides/panel-overrides.scss
@@ -67,7 +67,7 @@
   .panel-body {
     overflow: scroll;
     height: 100%;
-    padding-bottom: $panel-body-padding * 2;
+    padding-bottom: $panel-body-padding * 3;
   }
 }
 
